--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -4,9 +4,15 @@
 
 @layer base {
   h1 {
-    @apply text-4xl md:text-6xl font-bold leading-loose;
+    @apply text-4xl font-bold leading-loose md:text-6xl;
+  }
+  h2 {
+    @apply text-3xl font-bold leading-loose md:text-5xl;
+  }
+  h3 {
+    @apply text-xl font-semibold leading-loose md:text-3xl;
   }
   p {
-    @apply text-lg md:text-xl leading-relaxed;
+    @apply text-lg leading-relaxed md:text-xl;
   }
 }
